--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,12 +1,12 @@
 ---
-name: Tails Azimuth
+name: Rish
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
+occupation: Self starter founder
+company: Atomic Life Inc.
+email: admin@atomiclife.app
+twitter: https://twitter.com/rish1_2
 linkedin: https://www.linkedin.com
-github: https://github.com
+github: https://github.com/rush86999
 ---
 
 Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
