--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -9,8 +9,6 @@ linkedin: https://www.linkedin.com
 github: https://github.com/rush86999
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Rish is the founder of Atomic Life Inc. and self taught developer. He beleives in productivity hacks that actually work and save time.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+He started Atomic because there was a missing link between tasks, meetings and the calendar. He continues to code daily to make that missing link a reality.
