--- a/data/blog/daily-tasks/daily-routines-of-productive-founders.mdx
+++ b/data/blog/daily-tasks/daily-routines-of-productive-founders.mdx
@@ -7,6 +7,17 @@ summary: 'Daily routines and habits of highly productive founders'
 authors: ['markproductivityhacker']
 ---
 
+<div className="my-1 w-full overflow-hidden px-2 xl:my-1 xl:w-1/2 xl:px-2">
+    ![Productivity](/static/images/daily-tasks/daily-routines.jpeg)
+</div>
+
+### Photo Credits
+<div>
+  Photo by [Andreas Klassen](https://unsplash.com/@schmaendels?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Andreas Klassen</a> on <a href="https://unsplash.com/s/photos/productivity?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
+  on
+  [Unsplash](https://unsplash.com/s/photos/productivity?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
+</div>
+
 I talk to a lot of people about productivity. I’ve spent the last couple years of my career helping teams and individual developers at companies grow, scale, and be more productive. I’ve come to the conclusion that the biggest and hardest part of my job is helping people get into productive habits.
 
 A productive habit is when a behavior repeats itself multiple times a day without you having to think of it. It’s as if the behavior is a muscle and you’re reinforcing it every time you do it. It’s also very much like a muscle because you don’t have to think about doing it in the first place – your body does it on its own.
