--- a/data/blog/daily-tasks/daily-routines-of-productive-founders.mdx
+++ b/data/blog/daily-tasks/daily-routines-of-productive-founders.mdx
@@ -8,7 +8,7 @@ authors: ['markproductivityhacker']
 ---
 
 <div className="my-1 w-full overflow-hidden px-2 xl:my-1 xl:w-1/2 xl:px-2">
-    ![Productivity](/static/images/daily-tasks/daily-routines.jpeg)
+    ![Productivity](/static/images/daily-tasks/daily-routines.jpg)
 </div>
 
 ### Photo Credits
