fixed credits bug

--- a/data/blog/daily-tasks/daily-routines-of-productive-founders.mdx
+++ b/data/blog/daily-tasks/daily-routines-of-productive-founders.mdx
@@ -13,7 +13,7 @@ authors: ['markproductivityhacker']
 
 ### Photo Credits
 <div>
-  Photo by [Andreas Klassen](https://unsplash.com/@schmaendels?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Andreas Klassen</a> on <a href="https://unsplash.com/s/photos/productivity?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
+  Photo by [Andreas Klassen](https://unsplash.com/@schmaendels?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
   on
   [Unsplash](https://unsplash.com/s/photos/productivity?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
 </div>
