slight class change

--- a/data/blog/daily-tasks/daily-routines-of-productive-founders.mdx
+++ b/data/blog/daily-tasks/daily-routines-of-productive-founders.mdx
@@ -7,7 +7,7 @@ summary: 'Daily routines and habits of highly productive founders'
 authors: ['markproductivityhacker']
 ---
 
-<div className="my-1 w-full overflow-hidden px-2 xl:my-1 xl:w-1/2 xl:px-2">
+<div className="my-1 w-full overflow-hidden px-2">
     ![Productivity](/static/images/daily-tasks/daily-routines.jpg)
 </div>
 
