--- a/data/blog/daily-tasks/daily-routine-examples.mdx
+++ b/data/blog/daily-tasks/daily-routine-examples.mdx
@@ -1,9 +1,9 @@
 ---
-title: Daily Routine Examples for a Powerful Daily Schedule
+title: Daily Routine Examples for a Productive Daily Schedule
 date: '2022-10-28'
 tags: ['daily tasks', 'daily tasks app', 'daily tasks planner']
 draft: false
-summary: 'Daily Routine Examples for a Powerful Daily Schedule'
+summary: 'Daily Routine Examples for a Productive Daily Schedule'
 authors: ['markproductivityhacker']
 ---
 <div className="my-1 w-full overflow-hidden">
