--- a/data/blog/daily-tasks/5-things-everyday.mdx
+++ b/data/blog/daily-tasks/5-things-everyday.mdx
@@ -17,25 +17,25 @@ authors: ['markproductivityhacker']
   [Unsplash](https://unsplash.com/s/photos/daily-things?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText)
 </div>
 
-1. Set Goals and Track Your Progress
+###  1. Set Goals and Track Your Progress
 
 You have to track your progress to see if you’re actually getting closer to your goal. Use an app like Lift or an old fashioned pen and paper. It doesn’t matter which one you choose, as long as you actually write down what you are supposed to be doing. I track my progress with an app called Lift because it allows me to create goals and get instant feedback on how I’m doing.
 
-2. Prioritize Your Tasks
+### 2. Prioritize Your Tasks
 
 If you are going to be productive you have to get your priorities straight. You need to make sure that you are working on the most important tasks first. This means that if you have 2 emails to send and a phone call to make, you should be sending that email or making that phone call first. When you finish that task then you can move onto the next email or phone call.
 
 This also applies to meetings. If you’re trying to get more done it’s best to schedule meetings for times when you have the most energy. If you schedule a meeting for when you’re exhausted, you’re just going to spend your time doing things like checking email and answering texts. Make sure you’re always setting your priorities straight.
 
-3. Shut Off the Tech
+### 3. Shut Off the Tech
 
 If you want to get more done you need to shut off your tech. You want to focus 100% of your attention on what you are doing. You need to avoid distractions. Put your cell phone on airplane mode or put it on vibrate and unplug it. If you have to keep your phone close, put it on silent. Don’t do anything during your work time that is not related to your work.
 
-4. Take Breaks
+### 4. Take Breaks
 
 It’s important to take breaks throughout the day. If you go several hours without taking a break you will start to lose your mind to the point where you will be unable to get anything done. I set my phone to text me every hour during the day and that’s when I take a break. It’s also important to get up and move often. Even if it’s just for a few minutes break.
 
-5. Work in Time Slices
+### 5. Work in Time Slices
 
 You need to work in time slices. If you are going to be productive working on a task you need to break it up into small chunks. If you’re going to spend 2 hours working on a project, break it up into 2 hour chunks. Set a timer for 10 minutes and work on whatever you are doing. After 10 minutes you can get up and take a break before you start working on the next 10 minute chunk.
 
