--- a/data/blog/daily-tasks/daily-routines-of-productive-founders.mdx
+++ b/data/blog/daily-tasks/daily-routines-of-productive-founders.mdx
@@ -40,7 +40,7 @@ A lot of people are guilty of wasting time because they have low productivity. T
 
 But if you want to get better at the things you do, there are some things you can do to improve your productivity.
 
-## 1. Have a Clear Plan
+###  1. Have a Clear Plan
 
 If you want to be more productive, have a clear plan.
 
@@ -52,7 +52,7 @@ What you need is a plan that’s organized not just in a line on your list but a
 
 The reason you need a clear plan is because you can only be productive when you have a plan for what to do. If you have no plan, you’re likely to either be unfocused or overwhelmed by the amount of things you have to do.
 
-## 2. Set a Schedule
+###  2. Set a Schedule
 
 If you want to get more productive, you need to set a schedule.
 
@@ -66,7 +66,7 @@ You could also simply block out half your day before you start work on your busi
 
 Some people do this for all their side business activities. It’s more efficient for them because they’re not wasting time on things they shouldn’t be doing.
 
-## 3. Cut Out Distractions
+###  3. Cut Out Distractions
 
 If you want to get better at the tasks you do, you have to be more focused.
 
@@ -82,7 +82,7 @@ If you have too much going on around you, you won’t be able to focus on the ta
 
 Distractions are things that get in the way of your focus. You have to decide when and where you will do your tasks so that you don’t get distracted.
 
-## 4. Do Less
+###  4. Do Less
 
 If you want to get more productive, you have to do less.
 
@@ -102,7 +102,7 @@ Do less projects instead. Do only the projects that are critical.
 
 Most people can’t finish projects that aren’t critical. They don’t stop to think if they’re doing the right thing and end up doing the wrong things.
 
-## 5. Prioritize
+###  5. Prioritize
 
 You have to prioritize your tasks.
 
