added atomic note

--- a/data/blog/work/remote-work.mdx
+++ b/data/blog/work/remote-work.mdx
@@ -37,3 +37,6 @@ You must also make sure that your team is always available at the same time. Thi
 Conclusion
 
 Working remotely has become a norm in today’s business world. However, you need to make sure that you stay productive and effective while working with your team remotely. Remote collaboration is a key element of remote team work, so make sure that you know how to set up your team and how to collaborate with the remote team members.
+
+If you're looking for a scheduling app for work check out [Atomic](https://atomiclife.app) that will help you schedule meetings using AI.
+
