--- a/data/blog/work/improve-remove-work.mdx
+++ b/data/blog/work/improve-remove-work.mdx
@@ -1,7 +1,7 @@
 ---
 title: Tips to improve colloboration of remote teams to increase productivity
 date: '2022-10-30'
-tags: ['meeting', 'remote', 'Google calendar', 'video conferencing']
+tags: ['meeting', 'remote', 'teams', 'Communication']
 draft: false
 summary: 'Improve collaboration on remote teams with these tips'
 ---
