fixed tags typo

--- a/data/blog/pomodoro/pomodoro-technique.mdx
+++ b/data/blog/pomodoro/pomodoro-technique.mdx
@@ -1,9 +1,9 @@
 ---
 title: Pomodoro technique and how it improves productivity
 date: '2022-10-30'
-tags: ['pomodoro technique', 'productivity, '25 minutes', '5 minute break']
+tags: ['pomodoro technique', 'productivity', '25 minutes', '5 minute break']
 draft: false
-summary: 'Pomodoro technique - its usage and origins'
+summary: 'Pomodoro technique, its usage and origins'
 ---
 
 <div className="my-1 w-full overflow-hidden">
