--- a/data/blog/calendar/calendar-management.mdx
+++ b/data/blog/calendar/calendar-management.mdx
@@ -20,7 +20,7 @@ This is where the rubber meets the road. Your calendar can’t do everything for
 
 In this section, we’ll cover how to manage your workload by using the resources available to you.
 
-1. Define your priorities
+### 1. Define your priorities
 
 Priority is everything when it comes to managing a calendar. The first step to any successful schedule is understanding your priorities.
 
@@ -44,7 +44,7 @@ Maybe you’re on a budget, and you need to make sure that you’re sticking to 
 
 Whatever your priorities are, be sure to give them the proper attention they deserve.
 
-2. Stick to your schedule
+### 2. Stick to your schedule
 
 This is where many people fail. Once they’ve prioritized what’s most important to them, and given them the proper attention, people tend to drop the ball when it comes to sticking to a schedule.
 
@@ -76,7 +76,7 @@ If you’re working on a book report, you should never be able to schedule your 
 
 This makes it easier to manage. It helps you ensure that you’re working on the right thing at the right time, and it makes it easier to remember what you’re supposed to be working on.
 
-4. Stick to the plan
+### 3. Stick to the plan
 
 Your calendar shouldn’t be something that you ignore, or forget about. The truth is that it’s the only tool that you have that will help you stick to your plan.
 
@@ -100,7 +100,7 @@ If you find yourself working on a task that doesn’t relate to your plan, stop 
 
 If you find that you’re having trouble finding something to do, schedule something. There’s no better way to stay focused and stay on track than with something you have to do.
 
-Final words
+## Final words
 
 Calendar management is something nearly everyone struggles with at some point in their life. The trick is to develop some skills that will help you get ahead.
 
