--- a/data/blog/pomodoro/pomodoro-technique.mdx
+++ b/data/blog/pomodoro/pomodoro-technique.mdx
@@ -41,7 +41,7 @@ The other crucial element of the Pomodoro Technique is to take a break.
 
 “I see the Pomodoro Technique as a way to get more work done in less time. That is the reason why I like it,” Cirillo says.
 
-What is a pomodoro?
+## What is a pomodoro?
 
 A pomodoro is a small, kitchen timer made by the Italian company, TomTom. Cirillo says he likes to use a digital version of the timer because it’s easier to track his productivity.
 
