--- a/data/blog/work/improve-remove-work.mdx
+++ b/data/blog/work/improve-remove-work.mdx
@@ -20,7 +20,7 @@ Collaboration between teams is becoming the norm in today’s software developme
 
 Remote teams have different challenges, but, in my experience, the challenges that affect productivity are the same as for any other team. Here are some tips to improve collaboration between these teams:
 
-Communication
+## Communication
 
 If you work remotely, you can either use a video chat tool or go to the video chat room for the day. I don’t think that there is a difference in the quality of the video chat rooms, so I decided to use Zoom. I just did my regular morning standup, and from there, I started to ask some team members for clarification on their work.
 
@@ -34,7 +34,7 @@ If I am having a hard time with a specific task, I will ask another team member 
 
 In short: I asked questions to understand why someone is asking for information, after doing that, I provided an answer. I also asked questions and provided answers to other team members to make sure that I have a better understanding of the problem and I can help the team.
 
-Productivity
+## Productivity
 
 To increase productivity of a team, it is important to know what each team member is working on every day. For this, I prefer to share a calendar as a team so that we can know what other team members are working on. A calendar can be shared via email, Google Docs, Trello, Basecamp, or any other method that works for the team.
 
@@ -48,7 +48,7 @@ For team members that are working on the same project, it is a good idea to hold
 
 Communication is the key to increased productivity, so make sure to communicate frequently and frequently.
 
-Organization
+## Organization
 
 In order to have a successful project and increase productivity, it is important that a project manager be available to the team. The project manager should be available to the team when they need information, as well as to address important issues and questions.
 
@@ -66,7 +66,7 @@ In order to have a successful project, you should have a good understanding of t
 
 Communication is a key to having a successful project, so make sure to communicate frequently and frequently.
 
-Flexibility
+## Flexibility
 
 The distance between team members is a reality, and we need to accept it. We also need to accept the fact that we will need to work with different people, especially on the team that we do not interact with very often.
 
