--- a/data/blog/work/prioritize-at-work.mdx
+++ b/data/blog/work/prioritize-at-work.mdx
@@ -29,7 +29,7 @@ The first thing to do when you need to manage your time is assess the tasks. Mos
 
 Here are a few of my favorite tips for prioritizing tasks:
 
-1. Ask for Help
+### 1. Ask for Help
 
 If you are drowning in work, and simply have too much to do in too little time, ask for help. Remember, you did not get to this position where you are buried in work without being able to delegate or outsource.
 
@@ -39,7 +39,7 @@ If you need help, you can get it from your employees. You will be surprised at h
 
 Another tip for finding help is to have a friend or a colleague who is a skilled at time management. Ask them how they prioritize their work, and ask for their advice. You can also hire a coach to help you manage your time.
 
-2. Make a Plan for the Day
+### 2. Make a Plan for the Day
 
 Do you use your calendar to track your appointments? If not, do it today. Use your calendar to schedule appointments and to keep yourself aware when you have meetings or conference calls.
 
@@ -47,7 +47,7 @@ I've found that using a calendar is one of the most helpful things you can do to
 
 You can also use your calendar to help you organize your day. The simplest way to use your calendar is to put important time-management information on it. For example, you might put on your calendar when you have meetings and when you have lunches. This way you know when you have time to complete your project. You can also use your calendar to write down where you need to go on the day—a meeting, lunch, lunch with a client, a doctor's appointment, or a meeting to follow up on an email.
 
-3. Track Your Time
+### 3. Track Your Time
 
 Once you begin tracking your time, you will see when you are spending too much time on something.
 
@@ -59,7 +59,7 @@ Now that you know how long it takes you to complete the task, you can analyze ho
 
 The third thing you need to do is look at what the task will cost. For example, how much time is it costing you if you spend the next hour writing a report? If it is costing you three hours, then you may need to hire someone to help you.
 
-4. Get Rid of Clutter
+### 4. Get Rid of Clutter
 
 One of the most powerful ways to manage your time is to get rid of those tasks that don't give you any benefit. In order to do that, you must first be aware of how you spend your time. If you are not aware of how you spend your time, you will not be aware of what is cluttering your time with tasks that you can do without.
 
@@ -73,7 +73,7 @@ Here are a few ideas to help you get rid of clutter:
 * Take a look at your calendar. Is there something that conflicts with your family?
 * Take a look at your schedule. Is there something that conflicts with your other projects?
 
-5. Set Deadlines
+### 5. Set Deadlines
 
 The final tip for creating a more productive day is to set deadlines for yourself or your employees. Deadlines help you to focus your efforts, and they help you to know when you must complete each task.
 
