--- a/data/blog/work/remote-work.mdx
+++ b/data/blog/work/remote-work.mdx
@@ -18,13 +18,13 @@ summary: 'Improve collaboration on remote teams using conferencing solutions'
   
 As the business world transforms digitally, remote work opportunities have become a norm. Whether you’re working remotely for a full-time job, or a part-time gig job, you must make sure that your team stays efficient and productive while collaborating with one another. If you are a remote team manager or working remotely for the first time, here are some tips to keep in mind.
 
-Establishing the Base
+## Establishing the Base
 
 Even if you work remotely, you need to set up your team with the necessary tools for smooth communication. To establish the base, you need to make sure that you have all the necessary equipment, and that each team member has access to it. For instance, a video conferencing system is one of the most important tools that you could invest in. It is a digital resource that allows you to have a face-to-face interaction, no matter where each team member is.
 
 You need to make sure that every remote team member knows how to use the video conferencing system, and even more, that they know how to effectively use it during their calls. Having a well-coordinated and well-executed meeting, whether you are in the same room or not, is a key element of remote collaboration.
 
-Collaborating on a Remote Team
+## Collaborating on a Remote Team
 
 Collaborating is a key element of remote teams as well as face-to-face ones. Even if you are working remotely, you need to work with your team as if you were in an office. This will help your team to function as if they are in one office, and you need to be their leader.
 
@@ -34,7 +34,7 @@ You also need to remember that no matter how well you work with your team, there
 
 You must also make sure that your team is always available at the same time. This could be done by setting up a calendar in Google Calendar, and make sure that everyone is available at the same time. This will help ensure that all the team members will be available at the same time to discuss ideas or collaborate together.
 
-Conclusion
+## Conclusion
 
 Working remotely has become a norm in today’s business world. However, you need to make sure that you stay productive and effective while working with your team remotely. Remote collaboration is a key element of remote team work, so make sure that you know how to set up your team and how to collaborate with the remote team members.
 
