--- a/data/blog/meeting/meeting-conflicts.mdx
+++ b/data/blog/meeting/meeting-conflicts.mdx
@@ -21,15 +21,15 @@ The schedule conflict is, of course, the most common problem facing meetings. Th
 
 To get started, here are three steps to follow when scheduling your next meeting:
 
-Step 1: Clarify the meeting’s purpose
+## Step 1: Clarify the meeting’s purpose
 
 A key element of every meeting is the purpose: what do you want to achieve? If you can’t answer this question for your next meeting, I suggest taking a step back and thinking about it first. Sometimes the goal is to ‘catch up’; other times, it’s to ‘get something done’. As a leader in your business, it’s important to be clear about what you’re hoping to achieve from your next meeting.
 
-Step 2: Consider your audience’s time constraints
+## Step 2: Consider your audience’s time constraints
 
 The second question you should ask yourself is who will be attending the meeting, and are they all available at the same time? Some people might have specific deadlines to meet, and this could influence your choice of a meeting time.
 
-Step 3: Determine the best format for the meeting
+## Step 3: Determine the best format for the meeting
 
 Your next step is to consider the format of the meeting. Is it a meeting with your boss, or is it going to be a presentation? If you have the opportunity to have two meetings, it may be better to book two separate times rather than one.
 
